--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import "tailwindcss/base";
 @import url("https://fonts.cdnfonts.com/css/queenofeternity");
 
 /* Design tokens / CSS variables (extracted from WP preset) */
